{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 1189,
  "lineage": "b6d161ae-5dbc-490d-9e3c-f0e8eb39186a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "three_tier_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c10ce6b3c56b1519",
            "domain": "vpc",
            "id": "eipalloc-0c10ce6b3c56b1519",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-206-179-221.compute-1.amazonaws.com",
            "public_ip": "34.206.179.221",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three_tier_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:internet-gateway/igw-0c8c75fa76d3a2a3b",
            "id": "igw-0c8c75fa76d3a2a3b",
            "owner_id": "447131659068",
            "tags": {
              "Name": "three_tier_igw"
            },
            "tags_all": {
              "Name": "three_tier_igw"
            },
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "three_tier_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:447131659068:loadbalancer/app/three-tier-loadbalancer/a45bbbe5366412dc",
            "arn_suffix": "app/three-tier-loadbalancer/a45bbbe5366412dc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "three-tier-loadbalancer-920130518.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:447131659068:loadbalancer/app/three-tier-loadbalancer/a45bbbe5366412dc",
            "idle_timeout": 400,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-033e4a9e85d7a882e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02fbebaddeef684aa"
              },
              {
                "subnet_id": "subnet-04c776874e869d61f"
              },
              {
                "subnet_id": "subnet-0e52c5ce491700f75"
              }
            ],
            "subnets": [
              "subnet-02fbebaddeef684aa",
              "subnet-04c776874e869d61f",
              "subnet-0e52c5ce491700f75"
            ],
            "vpc_id": "vpc-06232365bb2b532ab",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.three_tier_lb_sg",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "three_tier_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:447131659068:listener/app/three-tier-loadbalancer/a45bbbe5366412dc/70ecbb574703b7aa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:447131659068:targetgroup/three-tier-lb-tg-0c7/a9676230270d4d21",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:447131659068:listener/app/three-tier-loadbalancer/a45bbbe5366412dc/70ecbb574703b7aa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:447131659068:loadbalancer/app/three-tier-loadbalancer/a45bbbe5366412dc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.three_tier_lb",
            "aws_lb_target_group.three_tier_tg",
            "aws_security_group.three_tier_lb_sg",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "three_tier_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:447131659068:targetgroup/three-tier-lb-tg-0c7/a9676230270d4d21",
            "arn_suffix": "targetgroup/three-tier-lb-tg-0c7/a9676230270d4d21",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:447131659068:targetgroup/three-tier-lb-tg-0c7/a9676230270d4d21",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "three-tier-lb-tg-0c7",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "three_tier_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c10ce6b3c56b1519",
            "connectivity_type": "public",
            "id": "nat-05d1c8f8874ff8905",
            "network_interface_id": "eni-0ba7a21785a99185a",
            "private_ip": "10.100.11.68",
            "public_ip": "34.206.179.221",
            "subnet_id": "subnet-04c776874e869d61f"
          },
          "dependencies": [
            "aws_eip.three_tier_nat_eip",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01e39a2ea12627a301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05d1c8f8874ff8905",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01e39a2ea12627a30",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.three_tier_nat_eip",
            "aws_nat_gateway.three_tier_ngw",
            "aws_route_table.three_tier_private_rt",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c8c75fa76d3a2a3b",
            "id": "r-rtb-09060112e5459fef61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09060112e5459fef6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.three_tier_internet_gateway",
            "aws_route_table.three_tier_public_rt",
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three_tier_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:route-table/rtb-01e39a2ea12627a30",
            "id": "rtb-01e39a2ea12627a30",
            "owner_id": "447131659068",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "three_tier_private"
            },
            "tags_all": {
              "Name": "three_tier_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three_tier_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:route-table/rtb-09060112e5459fef6",
            "id": "rtb-09060112e5459fef6",
            "owner_id": "447131659068",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "three_tier_public"
            },
            "tags_all": {
              "Name": "three_tier_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three_tier_private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e164d0c4e07e3cd4",
            "route_table_id": "rtb-01e39a2ea12627a30",
            "subnet_id": "subnet-0a35994dee9067e32"
          },
          "dependencies": [
            "aws_route_table.three_tier_private_rt",
            "aws_subnet.three_tier_private_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0d71cff88dde934",
            "route_table_id": "rtb-01e39a2ea12627a30",
            "subnet_id": "subnet-066b3b157dadf3602"
          },
          "dependencies": [
            "aws_route_table.three_tier_private_rt",
            "aws_subnet.three_tier_private_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ce9d66dcb230212",
            "route_table_id": "rtb-01e39a2ea12627a30",
            "subnet_id": "subnet-08d4b2c709a0009b0"
          },
          "dependencies": [
            "aws_route_table.three_tier_private_rt",
            "aws_subnet.three_tier_private_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three_tier_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c94c8a21cfabb324",
            "route_table_id": "rtb-09060112e5459fef6",
            "subnet_id": "subnet-0e52c5ce491700f75"
          },
          "dependencies": [
            "aws_route_table.three_tier_public_rt",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2e3c79b7d810c4b",
            "route_table_id": "rtb-09060112e5459fef6",
            "subnet_id": "subnet-04c776874e869d61f"
          },
          "dependencies": [
            "aws_route_table.three_tier_public_rt",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c15d65ee7ee33fa",
            "route_table_id": "rtb-09060112e5459fef6",
            "subnet_id": "subnet-02fbebaddeef684aa"
          },
          "dependencies": [
            "aws_route_table.three_tier_public_rt",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_backend_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:security-group/sg-0fc004b91080825f3",
            "description": "Allow Inbound HTTP from FRONTEND APP, and SSH inbound traffic from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc004b91080825f3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c3b7652432797434"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026874173d0466bba"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three_tier_backend_app_sg",
            "name_prefix": "",
            "owner_id": "447131659068",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.three_tier_bastion_sg",
            "aws_security_group.three_tier_frontend_app_sg",
            "aws_security_group.three_tier_lb_sg",
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:security-group/sg-0c3b7652432797434",
            "description": "Allow SSH Inbound Traffic From Set IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3b7652432797434",
            "ingress": [
              {
                "cidr_blocks": [
                  "34.224.95.27/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "three_tier_bastion_sg",
            "name_prefix": "",
            "owner_id": "447131659068",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_frontend_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:security-group/sg-026874173d0466bba",
            "description": "Allow SSH inbound traffic from Bastion, and HTTP inbound traffic from loadbalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026874173d0466bba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c3b7652432797434"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033e4a9e85d7a882e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three_tier_frontend_app_sg",
            "name_prefix": "",
            "owner_id": "447131659068",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.three_tier_bastion_sg",
            "aws_security_group.three_tier_lb_sg",
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:security-group/sg-033e4a9e85d7a882e",
            "description": "Allow Inbound HTTP Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033e4a9e85d7a882e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three_tier_lb_sg",
            "name_prefix": "",
            "owner_id": "447131659068",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three_tier_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:subnet/subnet-0a35994dee9067e32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a35994dee9067e32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447131659068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_private_1"
            },
            "tags_all": {
              "Name": "three_tier_private_1"
            },
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:subnet/subnet-066b3b157dadf3602",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066b3b157dadf3602",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447131659068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_private_2"
            },
            "tags_all": {
              "Name": "three_tier_private_2"
            },
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:subnet/subnet-08d4b2c709a0009b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d4b2c709a0009b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447131659068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_private_3"
            },
            "tags_all": {
              "Name": "three_tier_private_3"
            },
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three_tier_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:subnet/subnet-0e52c5ce491700f75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e52c5ce491700f75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447131659068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_public_1"
            },
            "tags_all": {
              "Name": "three_tier_public_1"
            },
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:subnet/subnet-04c776874e869d61f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c776874e869d61f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447131659068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_public_2"
            },
            "tags_all": {
              "Name": "three_tier_public_2"
            },
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:subnet/subnet-02fbebaddeef684aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fbebaddeef684aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447131659068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_public_3"
            },
            "tags_all": {
              "Name": "three_tier_public_3"
            },
            "vpc_id": "vpc-06232365bb2b532ab"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three_tier_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:vpc/vpc-06232365bb2b532ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0f45f5ec77c722077",
            "default_route_table_id": "rtb-039f028911a8f6324",
            "default_security_group_id": "sg-0b6898ceefa061b4e",
            "dhcp_options_id": "dopt-00ec9b7b6bc2c5052",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06232365bb2b532ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039f028911a8f6324",
            "owner_id": "447131659068",
            "tags": {
              "Name": "three_tier_vpc-59"
            },
            "tags_all": {
              "Name": "three_tier_vpc-59"
            }
          },
          "dependencies": [
            "random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}